--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,15 +1,25 @@
 <ion-header>
-
   <ion-navbar>
+    <ion-buttons start>
+      <button ion-button  menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Favorites Quotes</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let quote of quotes" (click)="onViewQuote(quote)">
-      <h2>{{quote.person}}</h2>
-      <p>{{quote.text}}</p>
-    </ion-item>
+    <ion-item-sliding *ngFor="let quote of quotes" (click)="onViewQuote(quote)">
+      <ion-item>
+        <h2>{{quote.person}}</h2>
+        <p>{{quote.text}}</p>
+      </ion-item>
+    <ion-item-options>
+      <button ion-button color="danger" (click)="onRemoveFromFavorite(quote)">
+         <ion-icon name="trash"></ion-icon>
+        Delete</button>
+    </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
