--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -14,7 +14,7 @@
   </ion-card-content>
 <ion-row>
   <ion-col>
-    <button ion-button small outline color="danger">Unfavorite</button>
+    <button ion-button small outline color="danger" (click)="onClose(true)">UnFavorite</button>
   </ion-col>
 </ion-row>
 </ion-card>
